--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -34,7 +34,10 @@ jobs:
         uses: peaceiris/actions-mdbook@v1.1.13
         with:
           mdbook-version: latest
-      - run: mdbook build
+      - run: |
+          pwd
+          mdbook build
+          pwd
       - name: Setup Pages
         uses: actions/configure-pages@v1
       - name: Upload artifact
